# 3D-DNA-Structure-in-OpenGL

./: CMakeLists.txt  Makefile  README.md  build.sh  configure.sh
docker/: Dockerfile  build_project_in_docker.sh  launch_project_in_docker.sh  pull_image.sh
docker/scripts/: run_project.sh
src/: main_code.cpp
